Mon Sep 24 17:41:03 2001  Christopher Faylor <cgf@redhat.com>

	* fhandler.h (fhandler_pipe::hit_eof): New method.
	(writepipe_exists): New class element.
	(orig_pid): Ditto.
	(id): Ditto.
	(is_slow): Eliminate.
	* pipe.cc (fhandler_pipe::set_close_on_exec): Set inheritance on
	writepipe_exists, if it exists.
	(fhandler_pipe::hit_eof): New method, modelled after tty.
	(fhandler_pipe::dup): Duplicate writepipe_exists, if it exists.
	(make_pipe): Set up a dummy event for pipes on windows 9x.  The
	nonexistence of this event means that the write side of the
	pipe has closed.
	(_dup): Move to syscalls.cc
	(_dup2): Ditto.

	* dtable.cc (dtable::build_fhandler): Fill out set_names here, if
	appropriate.
	* syscalls.cc (_open): Call set_names in build_fhandler.
	
	
Sun Sep 23 16:55:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* syscalls.cc (_open): Set name in fhandler object after successful
	creation.
	(stat_dev): Set device type to block device in FH_FLOPPY case.

Sun Sep 23 11:15:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* dtable.cc (dtable::build_fhandler): Initialize unit when using
	optional path_conv argument.

Sat Sep 22 17:33:45 2001  Christopher Faylor <cgf@cygnus.com>
			  Corinna Vinschen <corinna@vinschen.de>

	* dtable.cc (dtable::build_fhandler): Accept an optional path_conv
	argument.  If available, use this to calculate path name and device
	number.
	* dtable.h (dtable): Reflect above change.
	* fhandler.h (fhandler_base): Declare virtual method which accepts
	path_conv rather than path string as first argument.
	* fhandler.cc (fhandler_base::open): Define above new method.
	* syscalls.cc (_open): Set aside a path_conv variable for use in
	build_fhandler and subsequent call to open.

Sat Sep 22 12:44:57 2001  Christopher Faylor <cgf@cygnus.com>

	* exceptions.cc (setup_handler): Always relinquish lock after we've
	interrupted.
	* fhandler.cc: Move pipe methods to pipe.cc.
	* fhandler.h (fhandler_pipe): Add new methods.